crates/solidity/testing/snapshots/bindings_output/events/named_args/generated/v1/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected Equal or Semicolon.
    ╭─[input.sol:10:17]
    │
 10 │         emit Log({message: "testing", level: Severity.Info});
    │                 ──────────────────────┬─────────────────────  
    │                                       ╰─────────────────────── Error occurred here.
────╯
References and definitions: 
    ╭─[input.sol:1:1]
    │
  1 │ contract Test {
    │          ──┬─  
    │            ╰─── name: 1
  2 │     enum Severity { Info, Error }
    │          ────┬───   ──┬─  ──┬──  
    │              ╰─────────────────── name: 2
    │                       │     │    
    │                       ╰────────── name: 3
    │                             │    
    │                             ╰──── name: 4
    │ 
  4 │     event Log (
    │           ─┬─  
    │            ╰─── name: 5
  5 │         Severity level,
    │         ────┬─── ──┬──  
    │             ╰─────────── ref: 2
    │                    │    
    │                    ╰──── name: 6
  6 │         string message
    │                ───┬───  
    │                   ╰───── name: 7
    │ 
  9 │     function test() {
    │              ──┬─  
    │                ╰─── name: 8
 10 │         emit Log({message: "testing", level: Severity.Info});
    │         ──┬─ ─┬─  
    │           ╰─────── unresolved
    │               │   
    │               ╰─── name: 9
────╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  1 │ ╭─────▶ contract Test {
  2 │ │   │       enum Severity { Info, Error }
    │ │   │   ─────────────────┬────┬─────┬─────  
    │ │   │                    ╰────────────────── definiens: 2
    │ │   │                         │     │       
    │ │   │                         ╰───────────── definiens: 3
    │ │   │                               │       
    │ │   │                               ╰─────── definiens: 4
  3 │ │   ╭─▶ 
    ┆ ┆   ┆   
  5 │ │   │           Severity level,
    │ │   │   ───────────┬──────────  
    │ │   │              ╰──────────── definiens: 6
  6 │ │   │           string message
    │ │   │   ───────────┬───────────  
    │ │   │              ╰───────────── definiens: 7
  7 │ │ │ ├─▶     );
    │ │ │ │            
    │ │ │ ╰──────────── definiens: 5
  8 │ │ ╭───▶ 
    ┆ ┆ ┆     
 10 │ │ │             emit Log({message: "testing", level: Severity.Info});
    │ │ │     ───────────────────────────────┬──────────────────────────────  
    │ │ │                                    ╰──────────────────────────────── definiens: 9
 11 │ │ ├───▶     }
    │ │ │             
    │ │ ╰───────────── definiens: 8
 12 │ ├─────▶ }
    │ │           
    │ ╰─────────── definiens: 1
────╯
